2002-07-01  Richard Gillian <reg8@users.sourceforge.net>

	* src/main.cpp: Add -hpH to use the "adjust pH" setting for adding
	hydrogens.

	* src/mol.cpp: When adding hydrogens, if the parent atom is part
	of a residue, copy this information to the new atoms.

	* src/mol2.cpp: Write residue types and original atom names for
	the atoms if they exist.

2002-07-01  Stefan Kebekus <kebekus@users.sourceforge.net>

	* Doxyfile: New file, configuration for Doxygen API documentation.

	* configure: Updated with autoconf 2.52d.

	* Makefile.in: Added automatic API documentation generation. Use
	"make apidoc".

2002-06-29  Vincent Favre-Nicolin <vincefn@users.sourceforge.net>

	* src/mol.h: Give sample documentation from the primer for
	OBResidue, OBAtom and OBMol.

	* src/ring.h: As above for the OBRing class.

2002-06-28  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* configure.in, configure, src/Makefile.in: Adjust for various
	removed (unused) files.

	* src/fileformat.cpp, src/fileformat.h: Use a const char * title
	and declare ReadMolecule and WriteMolecule methods static to allow
	calling w/o needing to instantiate a specific OBFileFormat object.
	
	* src/*.cpp: Adjust all ReadFile methods to use const char* title,
	as above.

	* src/atom.cpp, src/binary.cpp, src/binary.h: Fixes imported from
	OELib.

	* src/generic.cpp, src/generic.h: Add support for torsion and
	angle data and associated handlers for OBGenericData.

	* src/main.cpp: Remove obsolete headers.

	* src/mol.cpp, src/mol.h: Add OBMol::FindTorsions method to fill
	the OBTorsionData in a molecule. Remove the confusing OBPose
	class. (Conformers are conformers and not managed by a separate
	class.) Remove residue code, which has migrated to residue.cpp.

	* src/obutil.cpp: Remove unused code.

	* src/pdb.cpp: Add OBSerialNums, imported from OELib.

2002-06-11  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/Makefile.in: Add proper commandline for new bin2hex for